Multiple crashes on SPARC

XMLWordPrintable

    • gc
    • b03

      Tests:
      src/jdk/nashorn/api/javaaccess/test/ArrayConversionTest.java
      runtime/BoolStore/BoolTest.java
      java/util/Arrays/CopyMethods.java
      java/lang/invoke/VarargsArrayTest.java
      java/lang/invoke/RicochetTest.java
      java/lang/invoke/MethodHandlesTest.java
      compiler/jvmci/compilerToVM/MaterializeVirtualObjectTest.java
      compiler/deoptimization/TestReassignFields.java
      com/oracle/jfr/api/recording/event/TestEventTime.java
      applications/runthese/RunThese30M.java


      There are some SIGBUS:
      # V [libjvm.so+0xd81cd8] void Access<1572864UL>::store_at<int>(oop,long,__type_1)+0xd8


      There are some test failures:
      java.lang.RuntimeException: Unexpected Boolean values
      at ReflectBoolTestHelper.testReflect(ReflectBoolTestHelper.jasm)
      at BoolTest.main(BoolTest.java:21)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainActionHelper$SameVMRunnable.run(MainActionHelper.java:229)
      at java.base/java.lang.Thread.run(Thread.java:841)

      and:
      java.lang.RuntimeException: bool field is wrong: false vs true
      at TestReassignFields.testArray(TestReassignFields.java:155)
      at TestReassignFields.main(TestReassignFields.java:169)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
      at java.base/java.lang.Thread.run(Thread.java:841)


      It was suggested that JDK-8197999 could be the source of this problem.

            Assignee:
            Roman Kennke
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: