8198564: Multiple crashes on SPARC

Reviewed-by: dholmes, simonis, stefank